# skywalking-rover

./: .asf.yaml  .dlc.json  .gitignore  .golangci.yml  .licenserc.yaml  CHANGES.md  LICENSE  Makefile  README.md  go.mod  go.sum
.github/workflows/: build-and-test.yaml  compatibility.yaml  dead-link-checker.yaml  e2e.yaml  publish-docker.yaml  rover.yaml
bpf/accesslog/: accesslog.c
bpf/accesslog/ambient/: ztunnel.c  ztunnel.h
bpf/accesslog/common/: connection.h  data_args.h  sock.h
bpf/accesslog/l24/: l24.h  nf.c  read_l2.c  read_l3.c  read_l4.c  write_l2.c  write_l3.c  write_l4.c
bpf/accesslog/process/: process.c  process.h
bpf/include/: api.h  goid.c  goid.h  list.h  protocol_analyzer.h  queue.h  socket.h  socket_data.h  socket_opts.h  socket_reader.h  symbol_offsets.h  syscall_reading.h
bpf/profiling/: offcpu.c  offcpu.h  oncpu.c  oncpu.h
cmd/: roverd.go
configs/: license_config.yaml  rover_configs.yaml
docker/: Dockerfile.base  Dockerfile.build  Dockerfile.debug
docs/: README.md  menu.yml
internal/cmd/: check.go  license.go  root.go  start.go
pkg/accesslog/: module.go  runner.go
pkg/boot/: module.go  module_test.go  register.go  starter.go
pkg/config/: config.go  config_test.go  env_override.go  env_override_test.go
pkg/core/: api.go  config.go  module.go
pkg/license/: dependeny.go  dist.go  fixer.go
pkg/logger/: logger.go  module.go  settings.go
pkg/module/: config.go  manager.go  manager_test.go  module.go  register.go
pkg/pprof/: config.go  module.go
pkg/process/: api.go  config.go  mdoule.go  module.go
pkg/profiling/: config.go  manager.go  mdoule.go  module.go
pkg/sharing/: config.go  module.go
pkg/tools/: ip.go  process.go
pkg/tools/btf/: ebpf.go  (+4 more)
scripts/release/: create_bin_release.sh  create_source_release.sh
test/e2e/cases/profiling/task/network/c_plus_plus/: CMakeLists.txt  docker-compose.yml  e2e.yaml
(+492 files in other folders)
